--- a/publications.bib
+++ b/publications.bib
@@ -1,4 +1,4 @@
-﻿@article{RN3387,
+﻿@article{time preserving grating,
    author = {Niu, Yong and Liang, Hongjing and Liu, Yi and Liu, Fangyuan and Ma, Ri and Ding, Dajun},
    title = {A tunable XUV monochromatic light source based on the time preserving grating selection of high-order harmonic generation},
    journal = {Chinese Physics B},
@@ -12,7 +12,7 @@
    type = {Journal Article}
 }
 
-@article{RN2914,
+@article{tight focusing,
    author = {Niu, Yong and Liu, Fangyuan and Liu, Yi and Liang, Hongjing and Yang, Yujun and Ma, Ri and Ding, Dajun},
    title = {Pressure-dependent phase matching for high harmonic generation of Ar and N2 in the tight focusing regime},
    journal = {Optics Communications},
